JT-4932 - fixing the issue on firefox with check box alignment

--- a/app/assets/stylesheets/components/_join-form.scss
+++ b/app/assets/stylesheets/components/_join-form.scss
@@ -76,6 +76,7 @@
     }
     input, label {
       display: table-cell;
+      vertical-align: middle;
     }
     label {
       padding: 0 0 0 5px;
